--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       <a href="#about" class="desktop-only">Conheça o app</a>
       <a href="#features" class="desktop-only">Funcionalidades</a>
       <a href="#pricing" class="desktop-only">Planos e Preços</a>
-
       <a href="#download" class="btn btn-sm">Baixar Agora</a>
     </nav>
 
@@ -168,5 +167,28 @@
   </div>
 </section>
 
+<section id="download">
+  <div class="container py-xl">
+    <div class="card px-lg even-columns itens-center">
+      <div>
+        <header>
+          <strong>download</strong>
+          <h2>Bora cantar?</h2>          
+        </header>
+        <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+
+          <div class="buttons flex gap-1">
+            <a href="#">
+              <img src="assets/icons/button-appstore.svg" alt="Baixar na Apple Store">
+            </a>
+            <a href="#">
+              <img src="assets/icons/button-playstore.svg" alt="Baixar na Play Store">
+            </a>
+          </div>
+      </div>      
+        <img src="assets/imagem/rapaz-ouvindo-musica.png" alt="">      
+    </div>
+  </div>
+</section>
 </body>
 </html>
